--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
 
-    <title>webSicall</title>
+    <title>Dany</title>
   </head>
   <body>
     <div id="root"></div>
