--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
 
-    <title>Dany</title>
+    <title>Angela</title>
   </head>
   <body>
     <div id="root"></div>
